Fix search bar text on dark mode

--- a/Contra/wwwroot/css/site.css
+++ b/Contra/wwwroot/css/site.css
@@ -114,6 +114,7 @@ nav #menu-button {
 
 .nav-search > form > input {
     background-color: var(--background-primary);
+    color: var(--text-primary);
 }
 
 .nav-search > form > .btn {
